--- Auto-Git Commit ---

--- a/Architecture/Learning/x86_64编程体系探索及编程/第2篇 处理器的工作模式/第10章 x86x64保护模式体系（上）/5. 段式管理的数据结构.md
+++ b/Architecture/Learning/x86_64编程体系探索及编程/第2篇 处理器的工作模式/第10章 x86x64保护模式体系（上）/5. 段式管理的数据结构.md
@@ -2603,8 +2603,8 @@ __set_syscall：
       rdmsr
       bts eax，0                                                ； SYSCALL enable bit
       wrmsr
-      mov edx，KERNEL_CS | （sysret_cs_sel << 16）
-      xor eax，eax
+      mov edx，KERNEL_CS | （sysret_cs_sel << 16）                ; edx表示高32位, 即63:32
+      xor eax，eax                                                ; eax表示低32位, 即31:0
       mov ecx，IA32_STAR
       wrmsr                                                       ； 设置 IA32_STAR
       mov rdx，__sys_service_routine
