--- Auto-Git Commit ---

--- a/Virtualization/3. KVM/2. 模块初始化/1. 基本原理.md
+++ b/Virtualization/3. KVM/2. 模块初始化/1. 基本原理.md
@@ -52,3 +52,11 @@ modprobe kvm_intel
 cd /sys/kernel/debug/tracing
 echo 0 > tracing_on
 ```
+
+缺点: 
+
+## trace-cmd
+
+```
+/usr/local/bin/trace-cmd record -p function_graph modprobe kvm_intel
+```
