--- Auto-Git Commit ---

--- a/Virtualization/3. KVM/2. 模块初始化/1. 基本原理.md
+++ b/Virtualization/3. KVM/2. 模块初始化/1. 基本原理.md
@@ -58,5 +58,6 @@ echo 0 > tracing_on
 ## trace-cmd
 
 ```
-/usr/local/bin/trace-cmd record -p function_graph modprobe kvm_intel
+rmmod kvm_intel; rmmod kvm
+/usr/local/bin/trace-cmd record -p function_graph "modprobe kvm; modprobe kvm_intel"
 ```
