--- a/Virtualization/3. KVM/2. 模块初始化/2. KVM模块初始化.md
+++ b/Virtualization/3. KVM/2. 模块初始化/2. KVM模块初始化.md
@@ -3,6 +3,7 @@
 <!-- code_chunk_output -->
 
 - [初始化概述](#初始化概述)
+- [trace数据](#trace数据)
 - [2. 整体流程](#2-整体流程)
 - [vmx_init: 模块初始化入口](#vmx_init-模块初始化入口)
 - [3. kvm_init: 初始化 kvm 框架](#3-kvm_init-初始化-kvm-框架)
@@ -59,6 +60,12 @@ KVM的初始化步骤分为以下三步。
 * 最后初始化**debugfs**的调试信息。
 
 3）进行后续的硬件初始化准备操作。
+
+# trace数据
+
+ftrace: 
+
+trace_cmd: trace_cmd_intel.trace
 
 # 2. 整体流程
 
