--- a/Virtualization/3. KVM/2. 模块初始化/1. 基本原理.md
+++ b/Virtualization/3. KVM/2. 模块初始化/1. 基本原理.md
@@ -53,12 +53,13 @@ cd /sys/kernel/debug/tracing
 echo 0 > tracing_on
 ```
 
-缺点: 
-
 ## trace-cmd
 
 ```
 rmmod kvm_intel; rmmod kvm
 modprobe kvm
-/usr/local/bin/trace-cmd record -p function_graph modprobe kvm_intel
+/usr/local/bin/trace-cmd record -p function_graph -g kvm_init modprobe kvm_intel
+/usr/local/bin/trace-cmd report > trace_cmd_intel.trace
 ```
+
+注: trace-cmd也是受tracing目录下配置影响的, 所以使用之前确保清除本身所有配置项
