--- Auto-Git Commit ---

--- a/Virtualization/3. KVM/2. 模块初始化/1. 基本原理.md
+++ b/Virtualization/3. KVM/2. 模块初始化/1. 基本原理.md
@@ -53,7 +53,7 @@ cd /sys/kernel/debug/tracing
 echo 0 > tracing_on
 ```
 
-## trace-cmd
+## trace-cmd(推荐)
 
 ```
 rmmod kvm_intel; rmmod kvm
@@ -63,3 +63,5 @@ modprobe kvm
 ```
 
 注: trace-cmd也是受tracing目录下配置影响的, 所以使用之前确保清除本身所有配置项
+
+然后最好用脚本过滤下, 比如过滤只得到以"modprobe-14924"开头的
