--- Auto-Git Commit ---

--- a/Virtualization/3. KVM/2. 模块初始化/1. 基本原理.md
+++ b/Virtualization/3. KVM/2. 模块初始化/1. 基本原理.md
@@ -62,7 +62,7 @@ modprobe kvm
 /usr/local/bin/trace-cmd report > trace_cmd_intel.trace
 ```
 
-缺点: 不显示模块信息
+缺点: 不显示属于哪个模块
 
 注: trace-cmd也是受tracing目录下配置影响的, 所以使用之前确保清除本身所有配置项
 
