--- Auto-Git Commit ---

--- a/Virtualization/3. KVM/2. 模块初始化/4. AMD平台模块初始化.md
+++ b/Virtualization/3. KVM/2. 模块初始化/4. AMD平台模块初始化.md
@@ -9,7 +9,6 @@ ftrace:
 
 trace_cmd: trace_cmd_amd.trace.modprobe-10259
 
-
 # 3. 整体流程
 
 ```cpp
@@ -70,9 +69,12 @@ static struct kvm_x86_init_ops svm_init_ops __initdata = {
         .disabled_by_bios = is_disabled,
         .hardware_setup = svm_hardware_setup,
         .check_processor_compatibility = svm_check_processor_compat,
-
         .runtime_ops = &svm_x86_ops,
 };
 
-
+static struct kvm_x86_ops svm_x86_ops __initdata = {
+        .hardware_unsetup = svm_hardware_teardown,
+        .hardware_enable = svm_hardware_enable,
+        ......
+};
 ```
