--- Auto-Git Commit ---

--- a/Virtualization/3. KVM/3. CPU虚拟化/2. 数据结构.md
+++ b/Virtualization/3. KVM/3. CPU虚拟化/2. 数据结构.md
@@ -700,6 +700,12 @@ struct vcpu_vmx {
 	struct loaded_vmcs    vmcs01;
 	struct loaded_vmcs   *loaded_vmcs;
 }
+
+// arch/x86/kvm/svm/svm.h
+struct vcpu_svm {
+    struct kvm_vcpu vcpu;
+    struct vmcb *vmcb;
+    unsigned long vmcb_pa;
 ```
 
 `struct vcpu_vmx`代表**vcpu的一个运行环境**, `loaded_vmcs`指向当前vcpu使用的vmcs. 对于非嵌套(即L1)虚拟机, `loaded_vmcs`一直指向`vmcs01`, 对于嵌套(L2), 指向另外的vmcs.
