--- Auto-Git Commit ---

--- a/Virtualization/Learning/AMD虚拟化/SVM/附. VMCB布局图.md
+++ b/Virtualization/Learning/AMD虚拟化/SVM/附. VMCB布局图.md
@@ -19,5 +19,7 @@ VMCB分为**两个区域**:
 
 ![2020-09-20-21-50-36.png](./images/2020-09-20-21-50-36.png)
 
-当未启用`SEV-ES`时，VMCB中的状态保存区域从VMCB页面的偏移量400h开始； 表B-2说明了状态保存区域中的字段； 请注意，该表列出了相对于状态保存区域（而不是整个VMCB）的偏移量。
+当未启用`SEV-ES`时，VMCB中的**状态保存区域**从VMCB页面的偏移量**400h**(1024 byte)开始； 
+
+`表B-2`说明了**状态保存区域**中的字段； 请注意，该表列出了相对于状态保存区域（而不是整个VMCB）的偏移量。
 
