--- a/Virtualization/Learning/AMD虚拟化/SVM/附. VMCB布局图.md
+++ b/Virtualization/Learning/AMD虚拟化/SVM/附. VMCB布局图.md
@@ -3,6 +3,8 @@ VMCB分为**两个区域**:
 * 第一个区域包含**各种控制位**（包括**拦截向量**）
 * 第二个区域包含已保存的**guest状态**。
 
+# 控制区域: Control Area
+
 表B-1说明了VMCB的控制区域的布局，该区域从VMCB页面内的偏移量零开始。 
 
 **控制区域**被填充为**1024字节**的大小。 **所有未使用的字节必须为零**，因为它们保留供将来扩展。 建议软件将所有**新分配的VMCB清零**。
@@ -19,7 +21,19 @@ VMCB分为**两个区域**:
 
 ![2020-09-20-21-50-36.png](./images/2020-09-20-21-50-36.png)
 
-当未启用`SEV-ES`时，VMCB中的**状态保存区域**从VMCB页面的偏移量**400h**(1024 byte)开始； 
+# 状态保存区域: State Save Area
+
+当**未启用**`SEV-ES`时，VMCB中的**状态保存区域**从VMCB页面的偏移量**400h**(1024 byte)开始； 
 
 `表B-2`说明了**状态保存区域**中的字段； 请注意，该表列出了相对于状态保存区域（而不是整个VMCB）的偏移量。
+
+![2020-09-20-22-37-12.png](./images/2020-09-20-22-37-12.png)
+
+![2020-09-20-22-38-08.png](./images/2020-09-20-22-38-08.png)
+
+![2020-09-20-22-38-22.png](./images/2020-09-20-22-38-22.png)
+
+**启用SEV-ES**时（`35. 加密状态(SEV-ES)`），VMSA结构从**VMSA指针指示的页面**的**偏移量0h**开始。 下表描述了SEV-ES guest虚拟机的VM保存状态的格式。
+
+根据状态在上下文切换期间硬件如何处理，将所有状态分为3种交换类型：
 
