--- Auto-Git Commit ---

--- a/Virtualization/Learning/AMD虚拟化/SVM/附. VMCB布局图.md
+++ b/Virtualization/Learning/AMD虚拟化/SVM/附. VMCB布局图.md
@@ -23,6 +23,8 @@ VMCB分为**两个区域**:
 
 # 状态保存区域: State Save Area
 
+## 未启用 SEV-ES
+
 当**未启用**`SEV-ES`时，VMCB中的**状态保存区域**从VMCB页面的偏移量**400h**(1024 byte)开始； 
 
 `表B-2`说明了**状态保存区域**中的字段； 请注意，该表列出了相对于状态保存区域（而不是整个VMCB）的偏移量。
@@ -38,3 +40,5 @@ VMCB分为**两个区域**:
 根据状态在上下文切换期间硬件如何处理，将所有状态分为3种交换类型：
 
 ![2020-09-20-23-34-07.png](./images/2020-09-20-23-34-07.png)
+
+**主机保存区**的格式与下表中描述的**guest保存区**相同，除了它在主机保存页中的偏移量400h处开始（例如，主机TR值相对于存储区开始处的偏移量490h被存储）。 主机保存页面）。
