--- Auto-Git Commit ---

--- a/Virtualization/Learning/AMD虚拟化/SVM/附. VMCB布局图.md
+++ b/Virtualization/Learning/AMD虚拟化/SVM/附. VMCB布局图.md
@@ -41,4 +41,4 @@ VMCB分为**两个区域**:
 
 ![2020-09-20-23-34-07.png](./images/2020-09-20-23-34-07.png)
 
-**主机保存区**的格式与下表中描述的**guest保存区**相同，除了它在主机保存页中的偏移量400h处开始（例如，主机TR值相对于存储区开始处的偏移量490h被存储）。 主机保存页面）。
+**主机保存区**的格式与下表中描述的**guest保存区**相同，除了它在**主机保存页**中的**偏移量400h**(1024 byte)处开始（例如，主机TR值相对于存储区开始处的偏移量490h被存储主机保存页面）。
