--- a/Linux/Time/Linux时间子系统/8. 动态时钟框架(CONFIG_NO_HZ、tickless).md
+++ b/Linux/Time/Linux时间子系统/8. 动态时钟框架(CONFIG_NO_HZ、tickless).md
@@ -82,3 +82,5 @@ static inline void tick_check_nohz(int cpu)
 ————————————————
 版权声明：本文为CSDN博主「DroidPhone」的原创文章，遵循 CC 4.0 BY-SA 版权协议，转载请附上原文出处链接及本声明。
 原文链接：https://blog.csdn.net/DroidPhone/article/details/8112948
+
+http://www.cnhalo.net/2016/06/13/linux-rcu/ (none)
