--- Auto-Git Commit ---

--- a/Hided/Git/10. send-mail.md
+++ b/Hided/Git/10. send-mail.md
@@ -99,3 +99,12 @@ http://www.aftermath.cn/2017/02/04/git_send_email_tips/
 https://blog.51cto.com/lyrazhang/1583974
 
 
+If I set my git config:
+
+smtpsslcertpath = /etc/ssl/certs
+
+using ssl enabled smtp fails (tested on gmail). However, setting it to:
+
+smtpsslcertpath = /etc/ssl/certs/ca-bundle.trust.crt
+
+fixes the problem.
