--- Auto-Git Commit ---

--- a/Linux/Performance/DaCapo/介绍.md
+++ b/Linux/Performance/DaCapo/介绍.md
@@ -3,5 +3,11 @@
 
 项目地址: http://dacapobench.org/
 
+github地址: https://github.com/dacapobench/dacapobench
+
 该基准套件旨在用作编程语言，内存管理和计算机体系结构社区进行**Java基准测试**的工具。 它由一系列的开源、真实世界的应用程序组成, 而这些具有非凡**内存负载**.
+
+# 环境搭建
+
+DaCapo基于java编写，需要java运行时环境，所以需要配置java环境。
 
