--- Auto-Git Commit ---

--- a/Linux/Performance/DaCapo/介绍.md
+++ b/Linux/Performance/DaCapo/介绍.md
@@ -11,3 +11,20 @@ github地址: https://github.com/dacapobench/dacapobench
 
 DaCapo基于java编写，需要java运行时环境，所以需要配置java环境。
 
+
+
+```
+java -jar dacapo-9.12-MR1-bach.jar   #获取指令使用信息
+java -jar dacapo-9.12-MR1-bach.jar -l   #列出所有benchmark
+java -jar dacapo-9.12-MR1-bach.jar avrora（benchmark名)   #运行相应benchmark
+
+#dacapo对每一个benchmark提供了三种不同大小的负载
+java -jar dacapo-9.12-MR1-bach.jar -s small avrora   #以小负载运行benchmark
+java -jar dacapo-9.12-MR1-bach.jar -s default avrora   #以默认负载运行benchmark
+java -jar dacapo-9.12-MR1-bach.jar -s large avrora   #以大负载运行benchmark
+```
+
+```
+# java -jar dacapo-9.12-MR1-bach.jar -l
+avrora batik eclipse fop h2 jython luindex lusearch lusearch-fix pmd sunflow tomcat tradebeans tradesoap xalan
+```
