--- a/Linux/Performance/DaCapo/介绍.md
+++ b/Linux/Performance/DaCapo/介绍.md
@@ -11,12 +11,30 @@ github地址: https://github.com/dacapobench/dacapobench
 
 DaCapo基于java编写，需要java运行时环境，所以需要配置java环境。
 
+1. 在配置环境之前需要将host的hugepage关闭，运行一下命令关闭：
 
+```
+echo never > /sys/kernel/mm/transparent_hugepage/enabled
+```
+
+2. guest中安装java
+
+```
+yum install java
+```
+
+3. 下载dacapo包
+
+```
+https://sourceforge.net/projects/dacapobench/files/latest/download
+```
+
+4. 常用命令
 
 ```
 java -jar dacapo-9.12-MR1-bach.jar   #获取指令使用信息
 java -jar dacapo-9.12-MR1-bach.jar -l   #列出所有benchmark
-java -jar dacapo-9.12-MR1-bach.jar avrora（benchmark名)   #运行相应benchmark
+java -jar dacapo-9.12-MR1-bach.jar avrora(benchmark名)   #运行相应benchmark
 
 #dacapo对每一个benchmark提供了三种不同大小的负载
 java -jar dacapo-9.12-MR1-bach.jar -s small avrora   #以小负载运行benchmark
@@ -24,7 +42,12 @@ java -jar dacapo-9.12-MR1-bach.jar -s default avrora   #以默认负载运行ben
 java -jar dacapo-9.12-MR1-bach.jar -s large avrora   #以大负载运行benchmark
 ```
 
+在不同负载下，同一个benchmark运行时间不同。benchmark相关的配置文件在文件夹dacapo-9.12-MR1-bach.jar/cnf中
+
+5. 操作示例
+
 ```
 # java -jar dacapo-9.12-MR1-bach.jar -l
 avrora batik eclipse fop h2 jython luindex lusearch lusearch-fix pmd sunflow tomcat tradebeans tradesoap xalan
 ```
+
