--- Auto-Git Commit ---

--- a/Virtualization/3. KVM/2. 模块初始化/4. AMD平台模块初始化.md
+++ b/Virtualization/3. KVM/2. 模块初始化/4. AMD平台模块初始化.md
@@ -15,8 +15,8 @@ trace_cmd: trace_cmd_amd.trace.modprobe-10259
 vmx_init()                               // 初始化入口
  └─ kvm_init(KVM_GET_API_VERSION)        // 初始化KVM框架
      ├─ kvm_arch_init()                  // 架构相关初始化
-     |   ├─ cpu_has_kvm_support()         // CPU是否支持kvm 
-     |   ├─ disabled_by_bios()            // bios是否禁用vt
+     |   ├─ has_svm()                    // CPU是否支持kvm, svm.c
+     |   ├─ is_disabled()               // bios是否禁用vt, svm.c
      |   ├─ boot_cpu_has()                // CPU是否支持一些特性
      |   ├─ kmem_cache_create("x86_fpu")  // x86_fpu kmem_cache
      |   ├─ alloc_percpu()                // kvm_shared_msrs
