--- a/Virtualization/3. KVM/2. 模块初始化/3. Intel平台模块初始化.md
+++ b/Virtualization/3. KVM/2. 模块初始化/3. Intel平台模块初始化.md
@@ -53,8 +53,8 @@ trace_cmd: trace_cmd_intel.trace.modprobe-14924
 vmx_init()                               // 初始化入口
  ├─ kvm_init(KVM_GET_API_VERSION)        // 初始化KVM框架
  |   ├─ kvm_arch_init()                  // 架构相关初始化
- |   |   ├─ cpu_has_kvm_support()         // CPU是否支持kvm 
- |   |   ├─ disabled_by_bios()            // bios是否禁用vt
+ |   |   ├─ cpu_has_kvm_support()         // CPU是否支持kvm, vmx.c
+ |   |   ├─ vmx_disabled_by_bios()        // bios是否禁用vt, vmx.c
  |   |   ├─ boot_cpu_has()                // CPU是否支持一些特性
  |   |   ├─ kmem_cache_create("x86_fpu")  // x86_fpu kmem_cache
  |   |   ├─ alloc_percpu()                // kvm_shared_msrs
