--- Auto-Git Commit ---

--- a/Virtualization/3. KVM/2. 模块初始化/3. Intel平台模块初始化.md
+++ b/Virtualization/3. KVM/2. 模块初始化/3. Intel平台模块初始化.md
@@ -57,7 +57,8 @@ vmx_init()                               // 初始化入口
  |   |   ├─ vmx_disabled_by_bios()        // bios是否禁用vt, vmx.c
  |   |   ├─ boot_cpu_has()                // CPU是否支持一些特性
  |   |   ├─ kmem_cache_create("x86_fpu")  // x86_fpu kmem_cache
- |   |   ├─ alloc_percpu()                // kvm_shared_msrs
+ |   |   ├─ kmem_cache_create_usercopy("x86_emulator")  // x86_emulator kmem_cache
+ |   |   ├─ alloc_percpu()                // user_return_msrs
  |   |   ├─ kvm_mmu_module_init()         // mmu模块初始化
  |   |   ├─ kvm_mmu_set_mask_ptes()       // shadow pte mask设置
  |   |   ├─ kvm_timer_init()              // 时钟初始化
