--- a/Virtualization/3. KVM/2. 模块初始化/3. Intel平台模块初始化.md
+++ b/Virtualization/3. KVM/2. 模块初始化/3. Intel平台模块初始化.md
@@ -60,6 +60,8 @@ vmx_init()                               // 初始化入口
  |   |   ├─ kmem_cache_create_usercopy("x86_emulator")  // x86_emulator kmem_cache
  |   |   ├─ alloc_percpu()                // user_return_msrs
  |   |   ├─ kvm_mmu_module_init()         // mmu模块初始化
+ |   |   |   ├─ kvm_mmu_set_mmio_spte_mask()         //
+ |   |   |   ├─ kmem_cache_create("pte_list_desc")         // pte_list_desc kmem_cache
  |   |   ├─ kvm_mmu_set_mask_ptes()       // shadow pte mask设置
  |   |   ├─ kvm_timer_init()              // 时钟初始化
  |   |   ├─ kvm_lapic_init()              // lapic初始化
