--- a/Virtualization/3. KVM/2. 模块初始化/4. AMD平台模块初始化.md
+++ b/Virtualization/3. KVM/2. 模块初始化/4. AMD平台模块初始化.md
@@ -19,7 +19,7 @@ vmx_init()                               // 初始化入口
      |   ├─ is_disabled()               // bios是否禁用vt, svm.c
      |   ├─ boot_cpu_has()                // CPU是否支持一些特性
      |   ├─ kmem_cache_create("x86_fpu")  // x86_fpu kmem_cache
-     |   ├─ kmem_cache_create_usercopy("x86_emulator")  // x86_emulator kmem_cache
+     |   ├─ kmem_alloc_emulator_cache()  // x86_emulator kmem_cache
      |   ├─ alloc_percpu()                // user_return_msrs
      |   ├─ kvm_mmu_module_init()         // mmu模块初始化
      |   ├─ kvm_mmu_set_mask_ptes()       // shadow pte mask设置
