--- a/Virtualization/Learning/AMD虚拟化/SVM/5. VMRUN指令/0. 概述.md
+++ b/Virtualization/Learning/AMD虚拟化/SVM/5. VMRUN指令/0. 概述.md
@@ -13,6 +13,6 @@ SVM的**核心构架**包括**指令VMRUN**(`5. VMRUN指令`)和**拦截操作**
 VMCB包含：
 * guest将要**被拦截的指令或事件**的列表（例如，写入CR3）
 * 各种控制位，它们指定guest的**执行环境**或指示在**运行guest代码之前**要执行的**特殊操作**
-* guest处理器状态（例如控制寄存器等）
+* **guest处理器状态**（例如控制寄存器等）
 
 请注意，SMM处理程序**内部不支持VMRUN**，并且**行为未定义**。
