--- Auto-Git Commit ---

--- a/Virtualization/3. KVM/3. CPU虚拟化/4. 代码分析.md
+++ b/Virtualization/3. KVM/3. CPU虚拟化/4. 代码分析.md
@@ -1851,7 +1851,7 @@ static void vmx_vcpu_run(struct kvm_vcpu *vcpu)
 
 调用`__vmx_vcpu_run`进入虚拟化模式, 这是一段汇编代码, 如下.
 
-```assembly
+```x86asm
 /**
  * __vmx_vcpu_run - Run a vCPU via a transition to VMX guest mode
  * @vmx:        struct vcpu_vmx * (forwarded to vmx_update_host_rsp)
