--- Auto-Git Commit ---

--- a/Virtualization/Learning/AMD虚拟化/SVM/5. VMRUN指令/1. 基本操作.md
+++ b/Virtualization/Learning/AMD虚拟化/SVM/5. VMRUN指令/1. 基本操作.md
@@ -16,6 +16,7 @@
 - [5. VMCB中的段状态: Segment State in the VMCB](#5-vmcb中的段状态-segment-state-in-the-vmcb)
 - [6. 规范化和一致性检查: Canonicalization and Consistency Checks](#6-规范化和一致性检查-canonicalization-and-consistency-checks)
 - [7. VMRUN和EFLAGS中TF/RF标志的相互作用: VMRUN and TF/RF Bits in EFLAGS](#7-vmrun和eflags中tfrf标志的相互作用-vmrun-and-tfrf-bits-in-eflags)
+- [8. VMRUN](#8-vmrun)
 
 <!-- /code_chunk_output -->
 
@@ -164,3 +165,7 @@ VMCB中的EFLAGS.RF的值会影响第一条guest指令。当VMRUN为EFLAGS.RF加
 EFLAGS的主机值对guest没有影响，EFLAGS的guest值对主机没有影响。
 
 关于保存在#VMEXIT上的EFLAGS.RF的值，另请参阅`7.1 VMEXIT的状态保存`节。
+
+# 8. VMRUN
+
+具体指令过程以及伪代码, 见AMD手册`3- General Purpose and System Instructions`.
