--- Auto-Git Commit ---

--- a/Virtualization/3. KVM/3. CPU虚拟化/2. 数据结构.md
+++ b/Virtualization/3. KVM/3. CPU虚拟化/2. 数据结构.md
@@ -396,7 +396,39 @@ struct kvm_run {
 存储有 **KVM 虚拟机**的**运行时参数**，如定时器、中断、内存槽等方面的信息。
 
 ```cpp
-// 
+// arch/x86/include/asm/kvm_host.h
+enum kvm_reg {
+        VCPU_REGS_RAX = __VCPU_REGS_RAX,
+        VCPU_REGS_RCX = __VCPU_REGS_RCX,
+        VCPU_REGS_RDX = __VCPU_REGS_RDX,
+        VCPU_REGS_RBX = __VCPU_REGS_RBX,
+        VCPU_REGS_RSP = __VCPU_REGS_RSP,
+        VCPU_REGS_RBP = __VCPU_REGS_RBP,
+        VCPU_REGS_RSI = __VCPU_REGS_RSI,
+        VCPU_REGS_RDI = __VCPU_REGS_RDI,
+#ifdef CONFIG_X86_64
+        VCPU_REGS_R8  = __VCPU_REGS_R8,
+        VCPU_REGS_R9  = __VCPU_REGS_R9,
+        VCPU_REGS_R10 = __VCPU_REGS_R10,
+        VCPU_REGS_R11 = __VCPU_REGS_R11,
+        VCPU_REGS_R12 = __VCPU_REGS_R12,
+        VCPU_REGS_R13 = __VCPU_REGS_R13,
+        VCPU_REGS_R14 = __VCPU_REGS_R14,
+        VCPU_REGS_R15 = __VCPU_REGS_R15,
+#endif
+        VCPU_REGS_RIP,
+        NR_VCPU_REGS,
+
+        VCPU_EXREG_PDPTR = NR_VCPU_REGS,
+        VCPU_EXREG_CR0,
+        VCPU_EXREG_CR3,
+        VCPU_EXREG_CR4,
+        VCPU_EXREG_RFLAGS,
+        VCPU_EXREG_SEGMENTS,
+        VCPU_EXREG_EXIT_INFO_1,
+        VCPU_EXREG_EXIT_INFO_2,
+};
+
 struct kvm_vcpu_arch {
         /*
          * rip and regs accesses must go through
