--- a/Virtualization/Learning/AMD虚拟化/SVM/附. VMCB布局图.md
+++ b/Virtualization/Learning/AMD虚拟化/SVM/附. VMCB布局图.md
@@ -1,9 +1,23 @@
 
+<!-- @import "[TOC]" {cmd="toc" depthFrom=1 depthTo=6 orderedList=false} -->
+
+<!-- code_chunk_output -->
+
+- [1. 概述](#1-概述)
+- [2. 控制区域: Control Area](#2-控制区域-control-area)
+- [3. 状态保存区域: State Save Area](#3-状态保存区域-state-save-area)
+  - [3.1. 未启用 SEV-ES](#31-未启用-sev-es)
+  - [3.2. 启用 SEV-ES](#32-启用-sev-es)
+
+<!-- /code_chunk_output -->
+
+# 1. 概述
+
 VMCB分为**两个区域**:
 * 第一个区域包含**各种控制位**（包括**拦截向量**）
 * 第二个区域包含已保存的**guest状态**。
 
-# 控制区域: Control Area
+# 2. 控制区域: Control Area
 
 表B-1说明了VMCB的控制区域的布局，该区域从VMCB页面内的偏移量零开始。 
 
@@ -21,9 +35,9 @@ VMCB分为**两个区域**:
 
 ![2020-09-20-21-50-36.png](./images/2020-09-20-21-50-36.png)
 
-# 状态保存区域: State Save Area
+# 3. 状态保存区域: State Save Area
 
-## 未启用 SEV-ES
+## 3.1. 未启用 SEV-ES
 
 当**未启用**`SEV-ES`时，VMCB中的**状态保存区域**从VMCB页面的偏移量**400h**(1024 byte)开始； 
 
@@ -34,6 +48,8 @@ VMCB分为**两个区域**:
 ![2020-09-20-22-38-08.png](./images/2020-09-20-22-38-08.png)
 
 ![2020-09-20-22-38-22.png](./images/2020-09-20-22-38-22.png)
+
+## 3.2. 启用 SEV-ES
 
 **启用SEV-ES**时（`35. 加密状态(SEV-ES)`），VMSA结构从**VMSA指针指示的页面**的**偏移量0h**开始。 下表描述了SEV-ES guest虚拟机的VM保存状态的格式。
 
