--- Auto-Git Commit ---

--- a/Virtualization/Learning/AMD虚拟化/SVM/5. VMRUN指令/2. VMSAVE和VMLOAD指令.md
+++ b/Virtualization/Learning/AMD虚拟化/SVM/5. VMRUN指令/2. VMSAVE和VMLOAD指令.md
@@ -5,7 +5,7 @@ VMSAVE and VMLOAD Instructions
 
 VMCB的系统物理地址在rAX中指定。当需要执行这些操作时，将在**执行VMRUN之前按需执行VMLOAD**，并在`#VMEXIT`之后的**任意所需点执行VMSAVE**。
 
-注: 也就是读取/存储某一个或某些个, 类似于Intel的VMREAD/VMWRITE.
+注: 和Intel的VMREAD/VMWRITE不同, vmload/vmsave是一次性加载/保存所有, 详细可以见AMD手册, `3- General Purpose and System Instructions`中`vmload/vmsave`指令的伪代码描述.
 
 VMSAVE和VMLOAD指令使用**rAX**中**VMCB的物理地址**。这些指令补充了**VMRUN指令**和`#VMEXIT`的状态保存/恢复功能。它们提供对**软件无法访问**的**隐藏处理器状态**的访问，以及**其他特权状态**。
 
