--- a/Virtualization/Learning/AMD虚拟化/SVM/7. 拦截操作/0. 概述.md
+++ b/Virtualization/Learning/AMD虚拟化/SVM/7. 拦截操作/0. 概述.md
@@ -22,7 +22,7 @@ SVM支持的拦截的两个主要类别是**指令拦截**和**异常拦截**。
 
 # 指令拦截
 
-这些发生在**指令执行过程中**定义明确的时刻 - 在**提交指令结果之前**，但相对于指令的异常检查，以特定于拦截器的优先级进行排序。 
+**这些拦截**发生在**指令执行过程**中**定义明确**的时刻 - 在**指令执行结果提交之前**，但相对于指令的异常检查，以特定于拦截器的优先级进行排序。 
 
 通常，在检查了简单异常（例如`#GP`（CPL不正确）或`#UD`）之后，但在**与内存访问相关的异常**（例如**页面错误**）和**基于特定操作数的异常之前**，将**检查指令拦截**。 
 
