--- Auto-Git Commit ---

--- a/Virtualization/Learning/AMD虚拟化/SVM/5. VMRUN指令/1. 基本操作.md
+++ b/Virtualization/Learning/AMD虚拟化/SVM/5. VMRUN指令/1. 基本操作.md
@@ -34,7 +34,7 @@ VMRUN仅在CPL 0处可用。如果CPL大于0，则会引发`#GP`（0）异常。
 4. 然后，VMRUN指令**检查刚加载的guest状态**。
     * 如果加载了**非法状态**，则处理器将**返回主机**（`6. VMEXIT`）。
 5. 否则，处理器现在将**运行guest代码**，直到发生**拦截事件**为止
-6. 在**拦截点**, 处理器将**挂起guest**并按照**VMRUN之后的指令**恢复主机执行。这称为`#VMEXIT`，并在`6. VMEXIT`中进行了详细描述。
+6. 在**拦截点**, 处理器将**挂起guest**并按照**VMRUN之后的指令**恢复主机执行。这称为`#VMEXIT`，在`6. VMEXIT`中进行了详细描述。
 
 VMRUN**保存或还原最少数量的状态信息**，允许VMM在guest退出后恢复执行。这样, VMM可以快速处理简单的拦截条件。如果VMM必须**保存**或**还原**其他guest状态信息（例如，**处理更复杂的拦截**或**切换到其他guest**），则VMM必须使用**VMLOAD**和**VMSAVE指令**来处理其他guest状态。 （`5.2 VMSAVE和VMLOAD指令`）。
 
