--- Auto-Git Commit ---

--- a/Virtualization/Learning/AMD虚拟化/SVM/20. 事件注入/事件注入.md
+++ b/Virtualization/Learning/AMD虚拟化/SVM/20. 事件注入/事件注入.md
@@ -1,6 +1,6 @@
 Event Injection
 
-VMM可以通过在**执行VMRUN**之前设置**VMCB**的**EVENTINJ域**注入异常或中断（统称为事件）到客户机。
+VMM可以通过在**执行VMRUN之前**设置**VMCB**的**EVENTINJ域**注入异常或中断（统称为事件）到客户机。
 
 特别的是，它与EXITINTINFO字段的格式一样。
 
