--- Auto-Git Commit ---

--- a/Virtualization/Learning/AMD虚拟化/SVM/5. VMRUN指令/1. 基本操作.md
+++ b/Virtualization/Learning/AMD虚拟化/SVM/5. VMRUN指令/1. 基本操作.md
@@ -69,6 +69,18 @@ VMRUN**保存或还原最少数量的状态信息**，允许VMM在guest退出后
 * `V_IRQ` - 该标志指示**是否有一个虚拟中断在客户机中挂起**。
 * **CPL** - 如果guest处于**实模式**，则CPL被**强制为0**；否则，若guest虚拟机处于**v86模式**，则将**CPL**强制设置为**3**。否则，将使用**VMCB**中保存的**CPL**。
 
+段寄存器及其隐藏部分:
+
+* ES.{base,limit,attr,sel}
+* CS.{base,limit,attr,sel} 
+* SS.{base,limit,attr,sel} 
+* DS.{base,limit,attr,sel}
+
+描述符表寄存器及其隐藏部分:
+
+* GDTR.{base,limit} 
+* IDTR.{base,limit}
+
 ## 3.1. 保证guest状态的一致性
 
 处理器检查**加载的guest状态的一致性**。如果在加载guest状态时一致性检查失败，则处理器将执行`#VMEXIT`。有关更多信息，请参阅下面的`规范化和一致性检查`。
