--- Auto-Git Commit ---

--- a/Virtualization/Learning/AMD虚拟化/SVM/5. VMRUN指令/1. 基本操作.md
+++ b/Virtualization/Learning/AMD虚拟化/SVM/5. VMRUN指令/1. 基本操作.md
@@ -45,11 +45,16 @@ VMRUN**保存或还原最少数量的状态信息**，允许VMM在guest退出后
 * `CS.SEL`、`NEXT_RIP` - **VMRUN之后的指令！！！** 的**CS选择器**和**rIP**。在`#VMEXIT`上，主机将在**该地址恢复运行**。
 * `RFLAGS`、`RAX` - **主机处理器模式**和**VMRUN**用于**寻址VMCB**的**寄存器**。
 * `SS.SEL`、`RSP` - 主机的**堆栈指针**。
-* `CR0`、`CR3`(又称为`nCR3`)、`CR4`、`EFER` - 主机的分页/操作模式。
+* `CR0`、`CR3`(又称为`nCR3`, 保存这个前提是NP打开了)、`CR4`、`EFER` - 主机的分页/操作模式。
 * `IDTR`、`GDTR` - 伪描述符。 VMRUN**不会**保存或还原**主机LDTR**。
 * `ES.SEL`和`DS.SEL`。
 
 注: host CR2不保存
+
+描述符表寄存器, 这两个没有隐藏部分:
+
+* GDTR.{base,limit} 
+* IDTR.{base,limit}
 
 处理器实现可以在`VM_HSAVE_PA MSR`指向的存储区域中**仅**存储**主机状态**的**一部分**或**不存储任何主机状态**，并且可以将**某些**或**全部主机状态**存储在**隐藏**的**片上存储器**(on-chip memory)中。**不同的实现方式**可能会选择保存主机的**段寄存器**以及**选择器的隐藏部分**。由于这些原因，**软件不得！！！** 使用主机状态保存区的格式或内容，也**不得！！！** 尝试通过**修改**主机保存区的内容来更改主机状态。
 
@@ -76,7 +81,7 @@ VMRUN**保存或还原最少数量的状态信息**，允许VMM在guest退出后
 * SS.{base,limit,attr,sel} 
 * DS.{base,limit,attr,sel}
 
-描述符表寄存器及其隐藏部分:
+描述符表寄存器, 这两个没有隐藏部分:
 
 * GDTR.{base,limit} 
 * IDTR.{base,limit}
