--- Auto-Git Commit ---

--- a/Virtualization/Learning/AMD虚拟化/SVM/7. 拦截操作/0. 概述.md
+++ b/Virtualization/Learning/AMD虚拟化/SVM/7. 拦截操作/0. 概述.md
@@ -27,6 +27,8 @@ SVM支持的**拦截**的两个主要类别是**指令拦截**和**异常拦截*
 
 # 异常拦截
 
+当正常的指令处理必须抛出
+
 当正常的指令处理必须在解决可能的双重故障条件之前和尝试提供异常之前（包括推送异常帧，访问IDT等）之前引发异常时，将检查异常拦截。
 
 对于某些异常，即使**拦截了异常**，处理器仍会写入某些特定于异常的寄存器。 （有关详细信息，请参见`12. 异常拦截`和以下部分中的描述。）当拦截到**外部或虚拟中断**时，该中断将处于**挂起状态**。
