--- Auto-Git Commit ---

--- a/Virtualization/Learning/AMD虚拟化/SVM/7. 拦截操作/0. 概述.md
+++ b/Virtualization/Learning/AMD虚拟化/SVM/7. 拦截操作/0. 概述.md
@@ -27,7 +27,7 @@ SVM支持的**拦截**的两个主要类别是**指令拦截**和**异常拦截*
 
 # 异常拦截
 
-当正常的指令处理必须抛出一个异常 在解决可能的双重故障条件之前 在尝试交付(delivery)这个异常之前
+当正常的指令处理必须抛出一个异常, 该异常在解决可能的双重故障条件之前以及在尝试交付(delivery)这个异常之前（包括推送一个exception frame，访问IDT等）会被检查, 这个就是异常拦截
 
 当正常的指令处理必须在解决可能的双重故障条件之前和尝试交付这个异常之前（包括推送一个exception frame，访问IDT等）之前引发异常时，将检查异常拦截。
 
