--- Auto-Git Commit ---

--- a/Virtualization/Learning/AMD虚拟化/SVM/7. 拦截操作/1. VMEXT的状态保存.md
+++ b/Virtualization/Learning/AMD虚拟化/SVM/7. 拦截操作/1. VMEXT的状态保存.md
@@ -7,7 +7,11 @@
 
 # guest状态
 
-VMCB中保存的**guest状态**是**拦截(intercept)触发时**的处理器状态. 在x86架构中，**陷阱**(traps, 与错误fault相对）将在**触发陷阱的指令完成执行之后！！！** 被检测并传递。 因此，陷阱拦截发生在**最初触发陷阱的指令执行之后**。 因此，保存的guest状态**包括执行该指令！！！的效果**。
+VMCB中保存的**guest状态**是**拦截(intercept)触发时**的处理器状态. 
+
+## trap: 陷阱
+
+在x86架构中，**陷阱**(traps, 与错误fault相对）将在**触发陷阱的指令完成执行之后！！！** 被检测并传递。 因此，陷阱拦截发生在**最初触发陷阱的指令执行之后**。 因此，保存的guest状态**包括执行该指令！！！的效果**。
 
 例子: 假设一个guest指令触发一个**数据断点**(`#DB`)**陷阱**，该陷阱被拦截。VMCB记录了**该指令执行后**的**guest状态**，因此保存的`CS：rIP`指向**下一条指令**，并且保存的**DR7**包含**匹配数据断点**的效果。(the saved DR7 includes the effects of matching the data breakpoint)
 
