--- Auto-Git Commit ---

--- a/Virtualization/3. KVM/5. IO虚拟化/4. Interrupt/5. IPI流程.md
+++ b/Virtualization/3. KVM/5. IO虚拟化/4. Interrupt/5. IPI流程.md
@@ -1,4 +1,22 @@
 
+
+```cpp
+// arch/x86/include/asm/apic.h
+struct apic {
+        /* IPI related functions */
+        void    (*wait_icr_idle)(void);
+        u32     (*safe_wait_icr_idle)(void);
+
+        void    (*send_IPI)(int cpu, int vector);
+        void    (*send_IPI_mask)(const struct cpumask *mask, int vector);
+        void    (*send_IPI_mask_allbutself)(const struct cpumask *msk, int vec);
+        void    (*send_IPI_allbutself)(int vector);
+        void    (*send_IPI_all)(int vector);
+        void    (*send_IPI_self)(int vector);
+}
+```
+
+
 Guest内核发送IPI，也就是向虚拟机APIC的寄存器中写入，对APIC的写动作会被截获，并退出到ROOT模式，对APIC的写动作调用 `apic_reg_write()`
 
 
