--- Auto-Git Commit ---

--- a/Architecture/Learning/x86_64编程体系探索及编程/第1篇 x86基础/第4章 处理器的身份/4. 处理器的型号（family，model与stepping）.md
+++ b/Architecture/Learning/x86_64编程体系探索及编程/第1篇 x86基础/第4章 处理器的身份/4. 处理器的型号（family，model与stepping）.md
@@ -75,7 +75,7 @@ else
 
 它的**ExtendedModel值是0010B**，**Model值是0101B**，组合起来是：**25H**。那么这个处理器模型将被描述为：**06\_25H**。这种**DisplayFamily\_DisplayModel的模型**相当重要，在Intel手册的描述中**使用这种方式**来**区别处理器的模型**。
 
-注: 参见手册 Table 2-1. CPUID Signature Values of DisplayFamily_DisplayModel
+注: 参见手册 `Table 2-1. CPUID Signature Values of DisplayFamily_DisplayModel`
 
 # 4. Intel家族
 
@@ -95,5 +95,4 @@ else
 
 ![2020-03-19-09-00-49.png](./images/2020-03-19-09-00-49.png)
 
-详细见Intel手册: `
-Table 2-1. CPUID Signature Values of DisplayFamily_DisplayModel`
+详细见Intel手册: `Table 2-1. CPUID Signature Values of DisplayFamily_DisplayModel`
