--- Auto-Git Commit ---

--- a/Virtualization/Learning/[Manual]AMD虚拟化/SVM/7. 拦截操作/1. VMEXT的状态保存.md
+++ b/Virtualization/Learning/[Manual]AMD虚拟化/SVM/7. 拦截操作/1. VMEXT的状态保存.md
@@ -1,7 +1,18 @@
 
+<!-- @import "[TOC]" {cmd="toc" depthFrom=1 depthTo=6 orderedList=false} -->
+
+<!-- code_chunk_output -->
+
+- [EXITCODE和EXITINFO](#exitcode和exitinfo)
+- [guest状态](#guest状态)
+
+<!-- /code_chunk_output -->
+
 # EXITCODE和EXITINFO
 
-触发后，拦截**将EXITCODE写入VMCB**，以标识**拦截的原因**。 **EXITINTINFO字段**指示guest是否在**通过IDT delivery中断或异常过程中**发生了拦截; VMM可以**使用此信息**来透明地完成delivery（`20. 事件注入`）。 
+触发后，拦截**将EXITCODE！！！写入VMCB**，以标识**拦截的原因**。 
+
+**EXITINTINFO！！！字段** 指示guest是否在**通过IDT delivery中断或异常过程中**发生了拦截; VMM可以**使用此信息**来透明地完成delivery（`20. 事件注入`）。 
 
 某些拦截在VMCB的**EXITINFO1**和**EXITINFO2**字段中提供了**其他信息**。 有关详细信息，请参见各个拦截器描述。
 
