--- Auto-Git Commit ---

--- a/Architecture/x86/4. x86中断与异常.md
+++ b/Architecture/x86/4. x86中断与异常.md
@@ -243,7 +243,7 @@ void main()
 
 ⓵ 错误(Fault): 由某种错误情况引起, 一般可以被错误处理程序纠正. 错误发生时, 处理器将控制权转移给对应的处理程序, 修正后重新**回到产生异常的指令继续执行**. 例如, 常见的缺页错误就属于此类.
 
-⓶ 陷阱(Trap): 指在执行了一条特殊指令后引起的异常, 处理器允许**忽略异常**继续往下执行. 在异常处理程序里不必修正错误, 回到发生异常指令的下一条指令继续执行. 陷阱是**有意的异常**，陷阱最重要的用途是在**用户程序**和**内核**之间提供一个像过程一样的接口（即**系统调用**）。例如, Linux 32用于实现系统调用的INT 80指令就属于此类.
+⓶ 陷阱(Trap): 指在执行了一条特殊指令后引起的异常, 处理器允许**忽略异常**继续往下执行. 在异常处理程序里不必修正错误, 回到发生异常指令的下一条指令继续执行. 陷阱是**有意的异常**，陷阱最重要的用途是在**用户程序**和**内核**之间提供一个像过程一样的接口（即**系统调用**）。例如, Linux 32用于实现**系统调用**的`INT 80`指令就属于此类.
 
 ⓷ 终止(Abort): 指严重的不可恢复的错误, 将导致程序终止的异常. 例如MCA(Machine Check Architecture).
 
