--- Auto-Git Commit ---

--- a/Architecture/Learning/x86_64编程体系探索及编程/第4篇 中断体系/第16章 中断和异常处理/2. Exception Source(异常源).md
+++ b/Architecture/Learning/x86_64编程体系探索及编程/第4篇 中断体系/第16章 中断和异常处理/2. Exception Source(异常源).md
@@ -64,7 +64,7 @@
 
 异常包括硬件异常和软件异常.
 
-* 一般, 硬件异常是指**除了**`#BP`(**INT3指令**)与`#OF`异常(**INTO指令**)以外的**所有异常**
+* 一般, **硬件异常**是指**除了**`#BP`(**INT3指令**)与`#OF`异常(**INTO指令**)以外的**所有异常**
 
 它们属于**fault或abort类型异常**. 也包括由**BOUND指令**产生的`#BR`异常及由**UD指令**产生的`#UD`异常. 所有类型的`#DB异常`(也包括了trap类型)也属于硬件异常. **硬件异常的向量号必须是0\~31(！！！**). 
 
