--- Auto-Git Commit ---

--- a/Architecture/Learning/x86_64编程体系探索及编程/第4篇 中断体系/第16章 中断和异常处理/5. 中断的屏蔽.md
+++ b/Architecture/Learning/x86_64编程体系探索及编程/第4篇 中断体系/第16章 中断和异常处理/5. 中断的屏蔽.md
@@ -3,12 +3,12 @@
 
 <!-- code_chunk_output -->
 
-* [1 可屏蔽的中断](#1-可屏蔽的中断)
-	* [1.1 自动屏蔽中断](#11-自动屏蔽中断)
-	* [1.2 当外部中断使用保留的vector时](#12-当外部中断使用保留的vector时)
-* [2 不可屏蔽的中断](#2-不可屏蔽的中断)
-	* [2.1 NMI\_EN寄存器](#21-nmi_en寄存器)
-	* [2.2 LVT LINT1寄存器](#22-lvt-lint1寄存器)
+- [1 可屏蔽的中断](#1-可屏蔽的中断)
+  - [1.1 自动屏蔽中断](#11-自动屏蔽中断)
+  - [1.2 当外部中断使用保留的vector时](#12-当外部中断使用保留的vector时)
+- [2 不可屏蔽的中断](#2-不可屏蔽的中断)
+  - [2.1 NMI_EN寄存器](#21-nmi_en寄存器)
+  - [2.2 LVT LINT1寄存器](#22-lvt-lint1寄存器)
 
 <!-- /code_chunk_output -->
 
@@ -74,7 +74,7 @@
 
 两种方式屏蔽NMI: 通过NMI\_EN寄存器与LVT LINT1寄存器.
 
-## 2.1 NMI\_EN寄存器
+## 2.1 NMI_EN寄存器
 
 芯片组LPC bridge的processor interface register(**处理器接口寄存器**)有个 **NMI\_EN 寄存器**, I/O端口地址是70h(实际上也是RTC的index寄存器), 对bit 7置位将屏蔽所有NMI源.
 
