--- a/Architecture/Learning/x86_64编程体系探索及编程/第4篇 中断体系/第16章 中断和异常处理/2. Exception Source(异常源).md
+++ b/Architecture/Learning/x86_64编程体系探索及编程/第4篇 中断体系/第16章 中断和异常处理/2. Exception Source(异常源).md
@@ -70,4 +70,7 @@
 
 能**产生错误码**的**硬件异常**是: `#DF`, `#TS`, `#NP`, `#SS`, `#GP`, `#PF`及`#AC`这7类.
 
-* **软件异常**指由**NIT3与INTO指令**产生的`#BP`与`#OF`异常.
+* **软件异常**指由`INT3`与`INTO指令`产生的`#BP`与`#OF`异常.
+
+
+INT1指令呢？？？
