--- Auto-Git Commit ---

--- a/Virtualization/Learning/[Manual]AMD虚拟化/SVM/7. 拦截操作/1. VMEXT的状态保存.md
+++ b/Virtualization/Learning/[Manual]AMD虚拟化/SVM/7. 拦截操作/1. VMEXT的状态保存.md
@@ -3,12 +3,12 @@
 
 <!-- code_chunk_output -->
 
-- [EXITCODE和EXITINFO](#exitcode和exitinfo)
+- [EXITCODE、EXITINTINFO和EXITINFO1/2](#exitcode-exitintinfo和exitinfo12)
 - [guest状态](#guest状态)
 
 <!-- /code_chunk_output -->
 
-# EXITCODE和EXITINFO
+# EXITCODE、EXITINTINFO和EXITINFO1/2
 
 触发后，拦截**将EXITCODE！！！写入VMCB**，以标识**拦截的原因**。 
 
