--- Auto-Git Commit ---

--- a/Virtualization/Learning/[Manual]AMD虚拟化/SVM/7. 拦截操作/2. IDT中断交付期间的拦截.md
+++ b/Virtualization/Learning/[Manual]AMD虚拟化/SVM/7. 拦截操作/2. IDT中断交付期间的拦截.md
@@ -17,6 +17,6 @@
 
 # 示例
 
-例子: guest在发出`#GP`的过程中引发`#GP`（根据x86规则解析为`#DF`的情况）, 并且在尝试传递`#DF`的过程中发生了截获的`#PF`。 截获`#PF`时，EXITINTINFO表示`#PF`发生时，访客正在传递`#DF`。 有关截取的页面错误本身的信息在EXITCODE，EXITINFO1和EXITINFO2字段中进行编码。 
+例子: guest在delivery`#NP`的**过程中**引发`#GP`（根据x86规则, 解析为`#DF`的情况）, 并且在尝试delivery`#DF`的过程中发生了`#PF`的interception。 截获`#PF`时，EXITINTINFO表示`#PF`发生时，访客正在传递`#DF`。 有关截取的页面错误本身的信息在EXITCODE，EXITINFO1和EXITINFO2字段中进行编码。 
 
 如果VMM决定修复并取消`#PF`，则可以通过重新注入（请参见第15.20节）**EXITINTINFO**中记录的故障来恢复guest执行。 如果VMM决定应将#PF反映回guest，则它必须根据x86规则将EXITINTINFO中的事件与拦截的异常结合起来。 在这种情况下，＃DF加#PF会导致三重故障或停机。
