--- Auto-Git Commit ---

--- a/Virtualization/Learning/[Manual]AMD虚拟化/SVM/5. VMRUN指令/1. 基本操作.md
+++ b/Virtualization/Learning/[Manual]AMD虚拟化/SVM/5. VMRUN指令/1. 基本操作.md
@@ -47,7 +47,7 @@ VMRUN**保存或还原最少数量的状态信息**，允许VMM在guest退出后
 * `CS.SEL`、`NEXT_RIP` - **VMRUN之后的指令！！！** 的**CS选择器**和**rIP**。在`#VMEXIT`上，主机将在**该地址恢复运行**。
 * `RFLAGS`、`RAX` - **主机处理器模式**和**VMRUN**用于**寻址VMCB**的**寄存器**。
 * `SS.SEL`、`RSP` - 主机的**堆栈指针**。
-* `CR0`、`CR3`(又称为`nCR3`, 保存这个前提是NP打开了)、`CR4`、`EFER` - 主机的分页/操作模式。
+* `CR0`、`CR3`(又称为`nCR3`, 保存这个前提是NP打开了)、`CR4`、`EFER` - 主机的**分页**/**操作**模式。
 * `IDTR`、`GDTR` - 伪描述符。 VMRUN**不会**保存或还原**主机LDTR**。
 * `ES.SEL`和`DS.SEL`。
 
