--- Auto-Git Commit ---

--- a/Architecture/x86/6. IO架构.md
+++ b/Architecture/x86/6. IO架构.md
@@ -3,23 +3,23 @@
 
 <!-- code_chunk_output -->
 
-- [ 1 x86的I/O架构](#1-x86的io架构)
-- [ 2 DMA](#2-dma)
-- [ 3 PCI设备](#3-pci设备)
-  - [ 3.1 PCI总线架构](#31-pci总线架构)
-  - [ 3.2 设备标识符](#32-设备标识符)
-  - [ 3.3 PCI配置空间](#33-pci配置空间)
-    - [ 3.3.1 PCI配置空间的访问](#331-pci配置空间的访问)
-  - [ 3.4 PCI设备枚举过程](#34-pci设备枚举过程)
-- [ 4 PCI Express](#4-pci-express)
-  - [ 4.1 PCI Express架构](#41-pci-express架构)
-  - [ 4.2 PCIe的优点](#42-pcie的优点)
+- [x86的I/O架构](#x86的io架构)
+- [2 DMA](#2-dma)
+- [3 PCI设备](#3-pci设备)
+  - [3.1 PCI总线架构](#31-pci总线架构)
+  - [3.2 设备标识符](#32-设备标识符)
+  - [3.3 PCI配置空间](#33-pci配置空间)
+    - [3.3.1 PCI配置空间的访问](#331-pci配置空间的访问)
+  - [3.4 PCI设备枚举过程](#34-pci设备枚举过程)
+- [4 PCI Express](#4-pci-express)
+  - [4.1 PCI Express架构](#41-pci-express架构)
+  - [4.2 PCIe的优点](#42-pcie的优点)
 
 <!-- /code_chunk_output -->
 
 将计算机的任务进行一个粗略的分类, 其实只有两种: **CPU运算**和**I/O操作**.
 
-# 1 x86的I/O架构
+# x86的I/O架构
 
 I/O是CPU访问外部设备的方法. 
 
@@ -27,7 +27,7 @@ I/O是CPU访问外部设备的方法.
 
 ⓵ **Port I/O(端口I/O**): 即通过**I/O端口**访问**设备寄存器**. 
 
-**x86**有**65536个8位的I/O端口(！！！**), 编号为0x0000 \~ 0xFFFF. 如果将**端口号**看作**访问设备端口的地址**, 那么这65536个端口就构成了**64KB的地址空间**, 称为**I/O端口地址空间**. 与前面说的线性地址空间和物理地址空间不同, I/O端口地址空间是**独立的**, 也就说它并**不是线性地址空间或物理地址空间的一部分(！！！**). 使用**IN/OUT指令访问端口**时, **CPU**通过一个**特殊的管脚**标识这是一次**I/O端口访问**, 于是芯片组知道地址线上的地址是I/O端口号并进行相应操作. 此外, **2个**或**4个连续的8位I/O端口**, 可以组成**16位**或**32位的I/O端口**.
+**x86**有**65536(`2^16`)个8位的I/O端口(！！！**), 编号为0x0000 \~ 0xFFFF. 如果将**端口号**看作**访问设备端口的地址**, 那么这65536个端口就构成了**64KB的地址空间**, 称为**I/O端口地址空间**. 与前面说的线性地址空间和物理地址空间不同, I/O端口地址空间是**独立的**, 也就说它并**不是线性地址空间或物理地址空间的一部分(！！！**). 使用**IN/OUT指令访问端口**时, **CPU**通过一个**特殊的管脚**标识这是一次**I/O端口访问**, 于是芯片组知道地址线上的地址是I/O端口号并进行相应操作. 此外, **2个**或**4个连续的8位I/O端口**, 可以组成**16位**或**32位的I/O端口**.
 
 ⓶ MMIO(Memory Map I/O, 内存映射I/O): 即通过**内存访问**的形式访问**设备寄存器或设备RAM**. 
 
