--- Auto-Git Commit ---

--- a/Virtualization/Learning/[Manual]AMD虚拟化/SVM/9. 指令拦截/指令拦截.md
+++ b/Virtualization/Learning/[Manual]AMD虚拟化/SVM/9. 指令拦截/指令拦截.md
@@ -1,7 +1,23 @@
 Instruction Intercepts
 
-表15-7指定了检查给定截获的指令，以及相关情况下相对于异常如何对截获排序的指令。
+表15-7指定了检查给定拦截器的指令，以及相关情况下相对于异常如何对截获排序的指令。
 
 ![2020-11-02-23-38-51.png](./images/2020-11-02-23-38-51.png)
 
 ![2020-11-02-23-39-24.png](./images/2020-11-02-23-39-24.png)
+
+<table>
+    <tr>
+        <th>指令拦截器</th>
+        <th>检查这个拦截器的指令</th>
+        <th>优先级</th>
+    </tr>
+    <tr>
+        <td>255:0</td>
+        <td>posted-interrupt requests</td>
+        <td width="235">没有异常需要检查。
+VMRUN复制VMCB.PauseFilterCount到一个内部计数器。每条暂停指令都会使计数器递减，只有在启用暂停拦截时，计数器小于零时才会发生暂停拦截。VMCB。处理器没有写入PauseFilterCount字段。某些事件(包括SMI)可能导致从VMCB重新加载内部计数。
+VMCB。PauseFilterCount支持由CPUID扩展函数8000_000A返回的EDX[10]表示。如果不支持此特性或VMCB。PauseFilterCount = 0，则可以截取第一个暂停指令。</td>
+    </tr>
+
+</table>
