--- a/Virtualization/Learning/[Manual]AMD虚拟化/SVM/9. 指令拦截/指令拦截.md
+++ b/Virtualization/Learning/[Manual]AMD虚拟化/SVM/9. 指令拦截/指令拦截.md
@@ -1,6 +1,6 @@
 Instruction Intercepts
 
-表15-7指定了检查给定拦截器的指令，以及相关情况下相对于异常如何对截获排序的指令。
+表15-7指定了检查给定拦截[器]的指令，以及相关情况下相对于异常如何对截获排序的指令。
 
 ![2020-11-02-23-38-51.png](./images/2020-11-02-23-38-51.png)
 
@@ -8,16 +8,16 @@ Instruction Intercepts
 
 <table>
     <tr>
-        <th>指令拦截器</th>
-        <th>检查这个拦截器的指令</th>
-        <th>优先级</th>
+        <th>指令拦截[器]</th>
+        <th>检查这个拦截[器]的指令</th>
+        <th width="235">优先级</th>
     </tr>
     <tr>
-        <td>255:0</td>
-        <td>posted-interrupt requests</td>
-        <td width="235">没有异常需要检查。
-VMRUN复制VMCB.PauseFilterCount到一个内部计数器。每条暂停指令都会使计数器递减，只有在启用暂停拦截时，计数器小于零时才会发生暂停拦截。VMCB。处理器没有写入PauseFilterCount字段。某些事件(包括SMI)可能导致从VMCB重新加载内部计数。
-VMCB。PauseFilterCount支持由CPUID扩展函数8000_000A返回的EDX[10]表示。如果不支持此特性或VMCB。PauseFilterCount = 0，则可以截取第一个暂停指令。</td>
+        <td>PAUSE</td>
+        <td>PAUSE</td>
+        <td>没有异常需要检查。
+VMRUN复制VMCB.PauseFilterCount到一个内部计数器。每个PAUSE指令都会使计数器递减，只有在启用暂停拦截时，计数器小于零时才会发生暂停拦截。处理器不会写VMCB.PauseFilterCount字段。某些事件(包括SMI)可能导致从VMCB重新加载内部计数。
+VMCB.PauseFilterCount支持由CPUID扩展函数8000_000A返回的EDX[10]表示。如果不支持此特性或VMCB.PauseFilterCount = 0，则可以截取第一个暂停指令。</td>
     </tr>
 
 </table>
