--- Auto-Git Commit ---

--- a/Virtualization/Learning/[Manual]AMD虚拟化/SVM/9. 指令拦截/指令拦截.md
+++ b/Virtualization/Learning/[Manual]AMD虚拟化/SVM/9. 指令拦截/指令拦截.md
@@ -15,9 +15,12 @@ Instruction Intercepts
     <tr>
         <td>PAUSE</td>
         <td>PAUSE</td>
-        <td>没有异常需要检查。
-VMRUN复制VMCB.PauseFilterCount到一个内部计数器。每个PAUSE指令都会使计数器递减，只有在启用暂停拦截时，计数器小于零时才会发生暂停拦截。处理器不会写VMCB.PauseFilterCount字段。某些事件(包括SMI)可能导致从VMCB重新加载内部计数。
-VMCB.PauseFilterCount支持由CPUID扩展函数8000_000A返回的EDX[10]表示。如果不支持此特性或VMCB.PauseFilterCount = 0，则可以截取第一个暂停指令。</td>
+        <td>
+        没有异常需要检查。
+        VMRUN复制VMCB.PauseFilterCount到一个内部计数器。每个PAUSE指令都会使计数器递减，只有在启用PAUSE拦截时，计数器小于零时才会发生PAUSE拦截。
+        处理器不会写VMCB.PauseFilterCount字段。某些事件(包括SMI)可能导致从VMCB重新加载内部计数。
+        VMCB.PauseFilterCount支持由CPUID扩展函数8000_000A返回的EDX[10]表示。如果不支持此特性或VMCB.PauseFilterCount = 0，则可以截获第一个PAUSE指令。
+        </td>
     </tr>
 
 </table>
