--- a/Virtualization/Learning/[Manual]AMD虚拟化/SVM/9. 指令拦截/指令拦截.md
+++ b/Virtualization/Learning/[Manual]AMD虚拟化/SVM/9. 指令拦截/指令拦截.md
@@ -18,7 +18,7 @@ Instruction Intercepts
         <td>
         没有异常需要检查。
         VMRUN复制VMCB.PauseFilterCount到一个内部计数器。每个PAUSE指令都会使计数器递减，只有在启用PAUSE拦截时，计数器小于零时才会发生PAUSE拦截。
-        处理器不会写VMCB.PauseFilterCount字段。某些事件(包括SMI)可能导致从VMCB重新加载内部计数。
+        处理器不会自动写VMCB.PauseFilterCount字段。某些事件(包括SMI)可能导致从VMCB重新加载内部计数。
         VMCB.PauseFilterCount支持由CPUID扩展函数8000_000A返回的EDX[10]表示。如果不支持此特性或VMCB.PauseFilterCount = 0，则可以截获第一个PAUSE指令。
         </td>
     </tr>
