--- Auto-Git Commit ---

--- a/Vim/4. 寄存器.md
+++ b/Vim/4. 寄存器.md
@@ -91,6 +91,10 @@ set clipboard=unnamed
 
 可以下载源码重新编译，在configure的时候增加 --with-features=huge。
 
+你可以卸载vim , 然后下载源码, 重新编译安装, 配置时使用 ./configure --with-features=huge 就可以使用加号寄存器和系统剪贴板了 但是, 不必这样麻烦, 可以安装一个vim的 增强包. 但是, 不是vim-common(各个vim版本共用的库), 也不是什么vim-gui, 而是/而且只需要 安装 vim-X11(大写的X), 这个是为了补充/vim为X graphic system使用的. 安装vim-X11,会 安装一个 vim的图形程序,即 gvim, 但是这个一般都不习惯使用.(gvim也同样可以使用vim的各种插件,包括 NERDTree等.) 同时, 会给vim添加 加号寄存器, 从而可以使用系统剪贴板. vim-X11添加一些附加的命令, 比如 evim, gvim等, 最重要的是这个 vimx命令, 他就是 在vim的基础上增加x系统的支持. 即vimx 是命令行下的vim支持系统剪贴板的版本. 所以只要在 gnome-terminal下, 运行vimx就能使vim支持 加号寄存器.
+
+最基本的版本是vi (即vim -v就是 vi) , 然后安装 vim-enhanced, 就得到基本增强的vim版本, 但是还不能使用系统剪贴板和加号寄存器. 然后, 要安装,vim-X11, 就得到 gvim软件, 和 vimx的 +clipboard 和 +xterm-clipboard版本.
+
 ### 2.3.3. 使用
 
 系统剪贴板寄存器(`+`)和X11视窗系统的主剪贴板寄存器(`*`)。众所周知，任何操作系统都有一个剪贴版板，而vim就是用`+`寄存器来代表这个剪贴版。
