--- a/Vim/0. Tips.md
+++ b/Vim/0. Tips.md
@@ -25,6 +25,7 @@
 - [6. 文件目录查找字符串](#6-文件目录查找字符串)
 - [7. 乱码](#7-乱码)
 - [8. 大小写转换](#8-大小写转换)
+- [使用剪切板](#使用剪切板)
 
 <!-- /code_chunk_output -->
 
@@ -313,3 +314,6 @@ gU1G ：从光标所在位置到文章第一个字符，都变为大写
 https://blog.csdn.net/lanchunhui/article/details/51542211
 
 https://blog.csdn.net/yangzhongxuan/article/details/8484167
+
+# 使用剪切板
+
