--- Auto-Git Commit ---

--- a/Vim/VIM使用进阶/15. vim使用系统剪切板.md
+++ b/Vim/VIM使用进阶/15. vim使用系统剪切板.md
@@ -22,6 +22,32 @@ vim --version | grep clipboard
 
 如果输出包含 `+clipboard` 或 `+xterm_clipboard` 就支持，如果这两项都是 - 则不支持。例如我的 Vim 输出为（MacOS 上的 macvim）：
 
+```
++clipboard         +keymap            +printer           +vertsplit
++emacs_tags        -mouse_gpm         -sun_workshop      -xterm_clipboard
+```
+
+如果你的 Vim 不支持剪切板，则需要重新安装一个带 clipboard 的 Vim：
+
+* MacOS 下可以直接用 brew 安装 macvim，它是支持剪切板的。
+* Linux 下，如果是 Debian 或 Ubuntu 可以安装 vim-gtk、vim-gnome，Redhat/CentOS 则可以安装 vim-X11。
+* Windows 下比较复杂，可以参考 https://vim.fandom.com/wiki/Using_the_Windows_clipboard_in_Cygwin_Vim
+
+重新安装后再执行 vim --version 来查看 clipboard 是否支持。注意：如果安装到了其他路径你需要改 PATH 或重启 Terminal。
+
+# 确定你的剪切板寄存器
+
+Vim 有 48 个寄存器，y, d, p 等命令一般使用匿名寄存器 ""， 支持剪切板的 Vim 会支持额外的选区寄存器 "* 和 "+。 更多 Vim 寄存器的信息，可以参考这篇文章：Vim 寄存器完全手册。
+
+"* 和 "+ 在 Mac 和 Windows 中，都是指系统剪切板（clipboard），例如 "*yy 即可复制当前行到剪切板。 其他程序中复制的内容也会被存储到这两个寄存器中。 在 X11 系统中（绝大多数带有桌面环境的 Linux 发行版），二者是有区别的：
+
+"* 指 X11 中的 PRIMARY 选区，即鼠标选中区域。在桌面系统中可按鼠标中键粘贴。
+"+ 指 X11 中的 CLIPBOARD 选区，即系统剪切板。在桌面系统中可按 Ctrl+V 粘贴。
+上述哪个寄存器对应于你的剪切板和 Linux 发行版有关，在配置 Vim 前可以测试一下。 比如用 Vim 打开一个文件，在 normal 模式下（进入 Vim 后默认的模式）键入 gg"*yG， 来把当前文件内容拷贝到 "* 寄存器。键入 gg"+yG 拷贝到 "+ 寄存器。
+
+到目前为止，你已经可以通过命令来拷贝粘贴内容了。接下来我们希望通过 Vim 配置， 让匿名寄存器和系统剪切板同步。
+
+
 
 # 参考
 
