--- Auto-Git Commit ---

--- a/Vim/VIM使用进阶/15. vim使用系统剪切板.md
+++ b/Vim/VIM使用进阶/15. vim使用系统剪切板.md
@@ -63,6 +63,16 @@ set clipboard=unnamedplus
 
 即让剪切板寄存器 "+ 和匿名寄存器 "" 保持同步， Linux 下一般对应于桌面系统的剪切板，比如 GNOME 的系统剪切板、以及 SECONDARY 选区（Ctrl+V 粘贴）。
 
+# 不支持 clipboard 的情况
+
+如果你的 Vim 不支持 clipboard 且没法升级或其他 clipboard 选项不好使的情况， 可以调用外部命令来实现拷贝粘贴，在 Vim 里直接调用，或设置快捷键调用。 比如 [让 Tmux 远程 Vim 使用本地系统的剪切板](https://harttle.land/2017/06/23/vim-tmux-clipboard.html)。
+
+如果在 MacOS 下，可以用 pbcopy/pbpaste 命令来实现。
+
+拷贝一段文本：先按 v 进入 visual 模式选中后执行 :w !pbcopy。拷贝整个文件可以 :%w !pbcopy
+粘贴一段文本：把光标移动到要插入的行，执行 :r !pbpaste
+如果在 Linux 下，可以借由 xclip 来实现。用 xclip -i -sel c 代替上面的 pbcopy，用 xclip -o -sel -c 代替上面的 pbpaste。
+
 # 参考
 
 https://harttle.land/2020/09/04/vim-clipboard.html
