--- Auto-Git Commit ---

--- a/Vim/VIM使用进阶/15. vim使用系统剪切板.md
+++ b/Vim/VIM使用进阶/15. vim使用系统剪切板.md
@@ -69,8 +69,9 @@ set clipboard=unnamedplus
 
 如果在 MacOS 下，可以用 pbcopy/pbpaste 命令来实现。
 
-拷贝一段文本：先按 v 进入 visual 模式选中后执行 :w !pbcopy。拷贝整个文件可以 :%w !pbcopy
-粘贴一段文本：把光标移动到要插入的行，执行 :r !pbpaste
+* 拷贝一段文本：先按 v 进入 visual 模式选中后执行 :w !pbcopy。拷贝整个文件可以 :%w !pbcopy
+* 粘贴一段文本：把光标移动到要插入的行，执行 :r !pbpaste
+
 如果在 Linux 下，可以借由 xclip 来实现。用 xclip -i -sel c 代替上面的 pbcopy，用 xclip -o -sel -c 代替上面的 pbpaste。
 
 # 参考
