--- Auto-Git Commit ---

--- a/Virtualization/3. KVM/2. 模块初始化/4. AMD平台模块初始化.md
+++ b/Virtualization/3. KVM/2. 模块初始化/4. AMD平台模块初始化.md
@@ -32,7 +32,7 @@ vmx_init()                               // 初始化入口
      |   ├─ kvm_lapic_init()              // lapic初始化
      ├─ kvm_irqfd_init()                 // 
      ├─ kvm_arch_hardware_setup()        // 
-     |   ├─ kvm_x86_ops->hardware_setup() // CPU是否支持kvm 
+     |   ├─ kvm_x86_ops->hardware_setup() // 硬件特性检查和建立, svm_hardware_setup
      |   |  ├─ rdmsrl_safe()              // 读msr
      |   |  ├─ store_idt()                // 保存idt
      |   |  ├─ setup_vmcs_config()        // 建立vmcs_config和vmx_capability
