--- Auto-Git Commit ---

--- a/Virtualization/Learning/[Manual]AMD虚拟化/SVM/14. 杂项拦截/code/4. pause filtering.md
+++ b/Virtualization/Learning/[Manual]AMD虚拟化/SVM/14. 杂项拦截/code/4. pause filtering.md
@@ -52,7 +52,12 @@ static __init int svm_hardware_setup(void)
 * 当cpu硬件不支持PauseFilter, 两个变量都设置为0
 * 当支持PauseFilter, 不支持PauseFilterThreshold, 则仅仅pause_filter_thresh设置为0
 
-在虚拟机初始化时候(`svm_vm_init`), 如果
+
+# 设置pause指令是否透传给虚拟机
+
+1. 虚拟机初始化时
+
+在**虚拟机初始化**时候(`svm_vm_init`), 如果
 * 硬件不支持PauseFilter或者不支持PauseFilterThreshold, 表明pause指令透传给了虚拟机
 * 设置的这两个模块变量, 任意一个为0, 表明pause指令透传给了虚拟机
 
@@ -64,6 +69,8 @@ static int svm_vm_init(struct kvm *kvm)
         ...
 }
 ```
+
+2. 从用户态来的ioctl设置
 
 或者通过ioctl设置了pause指令的vmexit失效, 也表明pause指令透传给了虚拟机
 
@@ -96,7 +103,7 @@ int kvm_vm_ioctl_enable_cap(struct kvm *kvm,
 }
 ```
 
-下面的函数就用到了上面
+判断pause指令是否透传, 就调用下面的函数, 即用到了上面的`kvm->arch.pause_in_guest`变量
 
 ```cpp
 // arch/x86/kvm/x86.h
@@ -105,6 +112,8 @@ static inline bool kvm_pause_in_guest(struct kvm *kvm)
         return kvm->arch.pause_in_guest;
 }
 ```
+
+
 
 在初始化vmcb时候(vcpu重置`svm_vcpu_reset`、vcpu创建`svm_create_vcpu`和关机拦截`shutdown_interception`会调用), 当没有将pause透传给虚拟机, 则
 
@@ -119,6 +128,8 @@ static void init_vmcb(struct vcpu_svm *svm)
 {
         // 获取vmcb的控制域
         struct vmcb_control_area *control = &svm->vmcb->control;
+
+        // pause指令没有透传给虚拟机
         if (!kvm_pause_in_guest(svm->vcpu.kvm)) {
                 // 设置vmcb控制字段的pause_filter_count和pause_filter_thresh
                 control->pause_filter_count = pause_filter_count;
@@ -153,7 +164,7 @@ static int pause_interception(struct vcpu_svm *svm)
 }
 ```
 
-这时候的`没有透传给虚拟机`只有一种情况
+因为已经有pause拦截, 所以这时候的`pause指令没有透传给虚拟机`只有一种情况, 
 
 
 
