--- Auto-Git Commit ---

--- a/Virtualization/Learning/[Manual]AMD虚拟化/SVM/14. 杂项拦截/code/4. pause filtering.md
+++ b/Virtualization/Learning/[Manual]AMD虚拟化/SVM/14. 杂项拦截/code/4. pause filtering.md
@@ -58,8 +58,7 @@ static __init int svm_hardware_setup(void)
 1. 虚拟机初始化时
 
 在**虚拟机初始化**时候(`svm_vm_init`), 如果
-* 硬件不支持PauseFilter或者不支持PauseFilterThreshold, 表明pause指令透传给了虚拟机
-* 设置的这两个模块变量, 任意一个为0, 表明pause指令透传给了虚拟机
+* 硬件不支持PauseFilter或者不支持PauseFilterThreshold, 表明pause指令透传给了虚拟机, 这里是不是有问题?
 
 ```cpp
 static int svm_vm_init(struct kvm *kvm)
@@ -73,6 +72,8 @@ static int svm_vm_init(struct kvm *kvm)
 2. 从用户态来的ioctl设置
 
 或者通过ioctl设置了pause指令的vmexit失效, 也表明pause指令透传给了虚拟机
+
+这个ioctl的时间和svm_vm_init时间前后??
 
 ```cpp
 //
