--- Auto-Git Commit ---

--- a/Virtualization/3. KVM/6. 虚拟机时钟模拟/4. APIC Timer模拟.md
+++ b/Virtualization/3. KVM/6. 虚拟机时钟模拟/4. APIC Timer模拟.md
@@ -46,9 +46,9 @@
 注: 详细见 `Architecture/Learning/x86_64编程体系探索及编程/第4篇 中断体系/第18章 local APIC体系/12. APIC timer.md`中APIC timer的操作步骤
 
 1. 虚拟机设置APIC timer, 主要包括两个, 写TMICT寄存器(用于one-shot/period模式); 写TSCDEADLINE MSR寄存器(用于tscdeadline模式). 从而发生vm-exit, 进入KVM中
-2. 在KVM中, 模拟虚拟机的APIC设置, 先设置这几个寄存器, 然后启用lapic timer定时器(优先使用hv timer`<preemption timer>`, 其次使用hrtimer)作为中断源, 最后进入Guest模式
+2. 在KVM中, 模拟虚拟机的APIC设置, 先设置这几个寄存器, 然后启用lapic timer定时器(优先使用**hv timer**`<preemption timer>`, 其次使用**hrtimer**)作为中断源, 最后进入Guest模式
 
-intel下还有posted interrupt
+intel下还有posted interrupt, amd下有doorbell机制
 
 3. timer到期会发生vm-exit, 进入KVM中
 * preemption timer导致的vm-exit, exit reason就是preemption timer
@@ -454,6 +454,7 @@ static int vmx_set_hv_timer(struct kvm_vcpu *vcpu, u64 guest_deadline_tsc,
                                                     ktimer->timer_advance_ns);
 
         if (delta_tsc > lapic_timer_advance_cycles)
+                // tscdeadline到期的差值大于advanced time, 则减去这个advanced time
                 delta_tsc -= lapic_timer_advance_cycles;
         else
                 delta_tsc = 0;
@@ -473,7 +474,7 @@ static int vmx_set_hv_timer(struct kvm_vcpu *vcpu, u64 guest_deadline_tsc,
          */
         if (delta_tsc >> (cpu_preemption_timer_multi + 32))
                 return -ERANGE;
-        // 
+        // 让下次到期的tsc, 经过advanced time调整了, 所以会更提前到期
         vmx->hv_deadline_tsc = tscl + delta_tsc;
         // tsc差是0, 表明已经过期
         *expired = !delta_tsc;
