--- Auto-Git Commit ---

--- a/Virtualization/3. KVM/6. 虚拟机时钟模拟/4. APIC Timer模拟.md
+++ b/Virtualization/3. KVM/6. 虚拟机时钟模拟/4. APIC Timer模拟.md
@@ -67,13 +67,33 @@ intel下还有posted interrupt, amd下有doorbell机制
 # 2. 相关结构体
 
 ```cpp
+// arch/x86/kvm/lapic.h
 struct kvm_lapic {
         // APIC Timer
         struct kvm_timer lapic_timer;
 }
 ```
 
-详细见`Virtualization/KVM/5. IO虚拟化/4. Interrupt/2. 数据结构.md`
+`struct kvm_lapic`详细见`Virtualization/KVM/5. IO虚拟化/4. Interrupt/2. 数据结构.md`
+
+```cpp
+// arch/x86/kvm/lapic.h
+struct kvm_timer {
+        // 这个timer使用hrtimer
+        struct hrtimer timer;
+        s64 period;                             /* unit: ns */
+        ktime_t target_expiration;
+        u32 timer_mode;
+        u32 timer_mode_mask;
+        u64 tscdeadline;
+
+        u64 expired_tscdeadline;
+        u32 timer_advance_ns;
+        s64 advance_expire_delta;
+        atomic_t pending;                       /* accumulated triggered timers */
+        bool hv_timer_in_use;
+};
+```
 
 # 3. 创建和初始化虚拟定时器设备
 
