--- Auto-Git Commit ---

--- a/Virtualization/3. KVM/6. 虚拟机时钟模拟/4. APIC Timer模拟.md
+++ b/Virtualization/3. KVM/6. 虚拟机时钟模拟/4. APIC Timer模拟.md
@@ -86,7 +86,7 @@ struct kvm_timer {
         u32 timer_mode;
         u32 timer_mode_mask;
         u64 tscdeadline;
-
+        // 通过blame看到最开始是tscdeadline模式下给advanced timer用
         u64 expired_tscdeadline;
         u32 timer_advance_ns;
         s64 advance_expire_delta;
