--- Auto-Git Commit ---

--- a/Virtualization/3. KVM/6. 虚拟机时钟模拟/4. APIC Timer模拟.md
+++ b/Virtualization/3. KVM/6. 虚拟机时钟模拟/4. APIC Timer模拟.md
@@ -20,7 +20,8 @@
 - [5. timer到期](#5-timer到期)
   - [5.1. preemption timer到期](#51-preemption-timer到期)
     - [5.1.1. 整体流程](#511-整体流程)
-    - [5.1.2.](#512)
+    - [5.1.2. 到期vmexit](#512-到期vmexit)
+    - [preemption timer处理](#preemption-timer处理)
   - [5.2. hrtimer到期的外部中断](#52-hrtimer到期的外部中断)
     - [5.2.1. 整体流程](#521-整体流程)
     - [5.2.2. apic_timer_fn(): hrtimer到期的响应函数](#522-apic_timer_fn-hrtimer到期的响应函数)
@@ -705,11 +706,10 @@ d7a08882a0a4b4e176691331ee3f492996579534
 ### 5.1.1. 整体流程
 
 ```cpp
-handle_preemption_timer()  // 启动apic timer定时器
- ├─ __start_apic_timer(apic, APIC_TMICT); // 传入 TMICT 初始计数寄存器
- |   ├─ atomic_set(&apic->lapic_timer.pending, 0); // 清空lapci timer的pending
- |   ├─ set_target_expiration(apic, count_reg); // 设置到期时间, 当前流程中, 周期性/一次性模式情况下才调用, tscdeadline不会调用
- |   |   ├─ ktime_t now = ktime_get(); // 获取当前ktime
+handle_preemption_timer()  // preemption timer处理
+ ├─ handle_fastpath_preemption_timer(vcpu); // 
+ |   ├─ kvm_lapic_expired_hv_timer(vcpu); // 清空lapci timer的pending
+ |   |   ├─ preempt_disable(); // 禁用抢占
  |   |   ├─ apic->lapic_timer.period = tmict_to_ns(apic, kvm_lapic_get_reg(apic, APIC_TMICT)); // 设置触发周期时间, 即TMICT初始计数寄存器值, 即TMICT寄存器的值(只不过转换成ns单位)
  |   |   ├─ apic->lapic_timer.tscdeadline = 0; return false; // TMICT为0的话, 意味着停止一次性/周期性timer, 则设置tscdeadline为0然后返回
  |   |   ├─ limit_periodic_timer_frequency(apic); //
@@ -764,9 +764,31 @@ handle_preemption_timer()  // 启动apic timer定时器
  |       └─ preempt_enable(); // 打开抢占
 ```
 
-### 5.1.2. 
+### 5.1.2. 到期vmexit
 
-preemption timer到期会发生vmexit, exit reason就是preemption timer
+preemption timer到期会发生vmexit, exit reason就是`preemption timer`, 最终在`vmx_handle_exit`中调用了`handle_preemption_timer`
+
+两种情况调用:
+
+1. `CONFIG_RETPOLINE`下直接调用并return
+
+```cpp
+#ifdef CONFIG_RETPOLINE
+        if (exit_reason == EXIT_REASON_MSR_WRITE)
+                return kvm_emulate_wrmsr(vcpu);
+        else if (exit_reason == EXIT_REASON_PREEMPTION_TIMER)
+                return handle_preemption_timer(vcpu);
+        ......
+#endif
+```
+
+2. 或者在函数最后调用
+
+```cpp
+return kvm_vmx_exit_handlers[exit_reason](vcpu);
+```
+
+### preemption timer处理
 
 ```cpp
 static int handle_preemption_timer(struct kvm_vcpu *vcpu)
